# streamlit-getting-started

./: README.md  pyproject.toml  requirements.txt
src/streamlit_getting_started/: main.py
